docs: record as-shipped Mockito/byte-buddy + starter-pom deviations
Add an execution note to the migration spec and plan so the design record
matches the merged code: Mockito 5.23.0 with an explicit byte-buddy 1.18.11
pin (native Java 25, no experimental flag) and the starter's
annotationProcessorPaths + surefire argLine. Resolves the final review's
documentation-drift finding.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>